# FLattice

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: Doxyfile
doc/html/: allocator_8hpp_source.html  annotated.html  calculation_8cpp.html  calculation_8hpp.html  calculation_8hpp_source.html  class_calculate_base-members.html  class_calculate_base.html  class_calculate_energy-members.html  class_calculate_energy.html  class_evolution-members.html  class_evolution.html  class_leap_frog-members.html  class_leap_frog.html  class_leap_frog_expansion-members.html  class_leap_frog_expansion.html  class_model-members.html  class_model.html  class_simulator-members.html  class_simulator.html  class_status-members.html  class_status.html  class_stopwatch-members.html  class_stopwatch.html  classes.html  common_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  evolution_8cpp.html  evolution_8hpp.html  evolution_8hpp_source.html  field_8hpp_source.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  (+21 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_6.js
doc/latex/: annotated.tex  calculation_8cpp.tex  calculation_8hpp.tex  class_calculate_base.eps  class_calculate_base.tex  class_calculate_energy.eps  class_calculate_energy.tex  class_evolution.eps  class_evolution.tex  class_leap_frog.eps  class_leap_frog.tex  class_leap_frog_expansion.eps  class_leap_frog_expansion.tex  class_model.tex  class_simulator.tex  class_status.tex  class_stopwatch.tex  evolution_8cpp.tex  evolution_8hpp.tex  files.tex  hierarchy.tex  main_8cpp.tex  model_8hpp.tex  parameter_8cpp.tex  parameter_8hpp.tex  refman.tex  status_8hpp.tex  stopwatch_8hpp.tex  struct_field.tex  write_8hpp.tex
include/: calculation.hpp  evolution.hpp  field.hpp  parameter.hpp  utilities.hpp
include/nlohmann/: json.hpp
lib/: calulation.cpp  evolution.cpp  field.cpp  parameter.cpp  utilities.cpp
src/: calculation.cpp  calulation.cpp  evolution.cpp  main.cpp  parameter.cpp
src/evolution_shceme/: leapfrog_base.cpp  leapfrog_in_FRW.cpp  leapfrog_in_Minkowsky.cpp
src/evolution_shceme/include/: create_evolution_scheme.hpp  evolution_base.hpp  leapfrog_base.hpp  leapfrog_in_FRW.hpp  leapfrog_in_Minkowsky.hpp
src/include/: allocator.hpp  calculation.hpp  common.hpp  evolution.hpp  field.hpp  model.hpp  parameter.hpp  search.hpp  simulator.hpp  status.hpp  stopwatch.hpp  utilities.hpp  write.hpp  writeVTK.hpp
src/model/: create_model.hpp  harmonic_oscillator.hpp  model.hpp  qball.hpp
src/parameter/: parameter.cpp  parameter.hpp  parameter.json
src/physical_quantity/: charge.cpp  energy.cpp
(+4 files in other folders)
